# advanced-machine-learning

./: .gitignore  FDA.py  README.md  analysis.ipynb  augmentations.py  citations.md  eval.py  greedy_soups.json  individual_models.json  myparser.py  options.py  parser.py  soups.ipynb  soups.py  test.py  toDayGAN.ipynb  train.py  util.py
datasets/: grl_dataset.py  train_dataset.py
lab1/: caltech_dataset.py  main.py  pyproject.toml  train.txt
losses/: __init__.py  arcface_loss.py  cosface_loss.py  gamp_loss.py  genericface_loss.py  sphereface_loss.py
model/: attention.py  grl_datasets.py  layers.py  network.py  resnet.py  vlad_network.py
notebooks/: analysis.ipynb  soups.ipynb
results/: ensembles.json  greedy_soups.json  individual_models.json  uniform_soups.json
toDayGan/data/: base_dataset.py
toDayGan/models/: combogan_model.py  networks.py
toDayGan/options/: base_options.py  test_options.py
